version 0.9.4
Put in a new dialog for repairing RAID and mirror volumes that
are missing physical volumes.

version 0.9.3
Added support for displaying thin pools and volumes.
Put in a new dialog for creating thin volumes and snaps.
The lvremove dialog now warns when deleting thin pools with volumes.

version 0.9.2
Added support for raid1, raid4, raid5 and raid6. 
Added support for the 'contiguous' policy in all dialogs that have
a policy option. Normal has always been supported. 

version 0.9.1
Improved pvmove dialog with regard to mirrors and snapshots by making the
not movable parts clearly labeled.

version 0.9.0
Made compiling faster by removing #include <QtGui> everywhere. Added
more calls to QLabel->setBuddy() to improve mouse-less usage. Reformatted
code with program "astyle" to make it more consistent. Improved consistency
of dialog appearance too.

version 0.8.6
Fixed immediate crash when group is clustered. Fixed configuration dialog
buttons to work more as a user would expect. /etc/mtab permissions don't get
mangled now.

version 0.8.5
It is now possible to cancel a running mkfs process and some other long
running process should follow soon. Sizes may now be specified in traditional
powers of two (1KiB = 1024) or in powers of ten (1KB = 1000) SI units.

version 0.8.4
Added to, and improved, the configuration dialog. Property panels can now
be configured. Changed the detection of mounted filesystems to use
/proc/self/mountinfo rather than the depracated /etc/mtab file. Fixed
a bug that deleted symlinked /etc/mtab and replaced it with a real file.

version 0.8.3
Added new configuration options and made showing some panels optional.
Improved the appearance of the properties panels and made them look
more consistant with the overall look.

version 0.8.2
Added a splash screen and moved the progressbar to the mainwindow
menubar. Improved the dialog for adding a mirror leg or changing
a mirror log.

version 0.8.1
Improved and added to the kvpm config options.
