@@ -1,6 +1,8 @@
 version 0.9.4
 Put in a new dialog for repairing RAID and mirror volumes that
-are missing physical volumes.
+are missing physical volumes. Combined the remove filesystem dialog
+and the mkfs dialog into one. Improved handling of partial volume 
+groups.
 
 version 0.9.3
 Added support for displaying thin pools and volumes.
